        disabled tinting and titles on bottom navhost\n
        fixed password change endpoint\n
        fixed empty insurance photo\n
        fixed profile crash\n
        fixed appointments dates\n
        added badge to appointments\n
        added telemedicine icon\n
        added logout to security screen\n
        fixed profile saving\n
        added ability to change audio output in videocall\n
        added telemedicine flag to slots\n
        changed default doctor\n
        added info to appointment card, created doctor app\n
        added telemed icon everywhere\n
        added pull to refresh on appointments\n
        version 26 patient, doctor 1\n
        fixed endpoints\n
        doctors list without pagination\n
        version 27 patient\n
        added pagination to doctors list\n
        fixed back buttons, every button work now\n
        version 28 patient, doctor 2\n
        fixed api\n
        version 29 patient, doctor 3\n
        added appointment card with detail info\n
        version 30 patient\n
        added appointment card with patient info for doctor\n
        version 31 patient, doctor 4\n
        added appointments for specific date screen\n
        added create appointment success screen\n
        appoinments list is currently pretty slow, bc it load each doctor for each appointment, future cache will fix that\n
        version 32 patient\n
        added doctor caching (don't have cache update functionality yet)\n
        version 33 patient\n
        appointments split by status\n
        fixed insurances\n
        version 34 patient\n
        version 35 patient\n
        appointments split by status with colors\n
        doctor filters without location rn\n
        fixed some ui bugs\n
        multiselect screen with search\n
        version 36 patient\n
        profile avatar fixed\n
        collapsible appointments\n
        doctor search\n
        version 37 patient\n

