@@ -7,16 +7,15 @@ services:
       dockerfile: Dockerfile_test
       args:
         DOCKER_BUILDKIT: 1
+    tty: true
     container_name: android-container
     environment:
       - CI_REGISTRY_USER
       - CI_REGISTRY_PASSWORD
       - CI_REGISTRY
     volumes:
-      - .:/app
       - android-sdk-data:/usr/local/android-sdk
       - fastlane-data:/root/.fastlane
-
 volumes:
   android-sdk-data:
   fastlane-data:
